[metadata]
name = my_project
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Description of my project

[options]
packages = find:
install_requires =
    chardet==4.0.0
    click==8.0.1
    gtts==2.2.3
    idna==3.3
    importlib-metadata==4.8.1
    nltk==3.6.5
    Pillow==8.4.0
    pluggy==1.0.0
    py==1.11.0
    pyparsing==3.0.6
    pytest==6.2.5
    regex==2021.11.1
    six==1.16.0
    sumy==0.8.1
    text-unidecode==1.3
    textwrap3==0.9.2
    toml==0.10.2
    tqdm==4.62.3
    typing-extensions==3.10.0.2
    urllib3==1.26.7
    zipp==3.6.0
